--- a/src/main/resources/FXML/LoginScreen.fxml
+++ b/src/main/resources/FXML/LoginScreen.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="460.0" prefWidth="403.0" style="-fx-border-width: 4; -fx-border-radius: 4; -fx-border-color: #14171A; -fx-background-color: #444444;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScalaLoginWindow">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="460.0" prefWidth="403.0" style="-fx-border-width: 4; -fx-border-radius: 4; -fx-border-color: #14171A; -fx-background-color: #444444;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScalaLoginController">
    <Button fx:id="logButton" alignment="CENTER" defaultButton="true" layoutX="104.0" layoutY="360.0" mnemonicParsing="false" onAction="#actionLogButton" prefHeight="34.0" prefWidth="187.0" style="-fx-background-color: #2069e0; -fx-border-radius: 18; -fx-background-radius: 18;" text="Login" textAlignment="CENTER">
       <font>
          <Font name="Ubuntu Bold" size="13.0" />
@@ -33,9 +33,7 @@
       </font>
    </TextField>
    <ImageView fitHeight="217.0" fitWidth="240.0" layoutX="98.0" pickOnBounds="true" preserveRatio="true">
-      <image>
          <Image url="@../Pics/Chat_Icon.png" />
-      </image>
    </ImageView>
    <effect>
       <DropShadow />
