--- a/src/main/resources/FXML/LoginScreen_old.fxml
+++ b/src/main/resources/FXML/LoginScreen_old.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-border-width: 2; -fx-border-color: #14171A; -fx-background-color: #657786;" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScalaLoginWindow">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-border-width: 2; -fx-border-color: #14171A; -fx-background-color: #657786;" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScalaLoginController">
    <Button fx:id="logButton" alignment="CENTER" defaultButton="true" layoutX="267.0" layoutY="321.0" mnemonicParsing="false" onAction="#actionLogButton" prefHeight="34.0" prefWidth="65.0" style="-fx-background-color: #1DA1F2;" text="Login">
       <font>
          <Font name="Ubuntu Bold" size="13.0" />
@@ -36,9 +36,7 @@
       </font>
    </TextField>
    <ImageView fitHeight="145.0" fitWidth="144.0" layoutX="228.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
-      <image>
          <Image url="@../Pics/Chat_Icon.png" />
-      </image>
    </ImageView>
    <effect>
       <DropShadow />
